[gd_scene load_steps=3 format=3 uid="uid://cxwxq7e86qyvi"]

[ext_resource type="Script" path="res://Scripts/hud_manager.gd" id="1_q2hsi"]
[ext_resource type="PackedScene" uid="uid://xkvcu2q0qn5v" path="res://Scenes/Hud Elements/pause_menu.tscn" id="2_n5ox1"]

[node name="HudManager" type="Node"]
script = ExtResource("1_q2hsi")
pauseMenuRef = ExtResource("2_n5ox1")

[node name="WalkingHud" type="CanvasLayer" parent="."]

[node name="HoverTextPanel" type="Panel" parent="WalkingHud"]
custom_minimum_size = Vector2(200, 100)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="WalkingHud/HoverTextPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Some Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuHud" type="CanvasLayer" parent="."]
